fix: align element in pagination

--- a/apps/gauzy/src/app/@shared/pagination/pagination.component.scss
+++ b/apps/gauzy/src/app/@shared/pagination/pagination.component.scss
@@ -43,5 +43,7 @@
 
     .pagination {
         font-size: 0.875rem;
+        display: flex;
+        align-items: center;
     }
 }
